(feat) - integrated supabase + celery + upstash

--- a/.env.sample
+++ b/.env.sample
@@ -33,3 +33,9 @@ SECRET_KEY=your-very-secret-key-change-in-production
 # These will be used by the Next.js web application
 NEXT_PUBLIC_API_URL=http://localhost:8000
 NEXT_PUBLIC_APP_NAME=Doccelerate
+
+
+# Connect to Supabase via connection pooling
+DATABASE_URL="postgresql://postgres.[YOUR-PROJECT-ID]:[YOUR-PASSWORD]@aws-0-eu-central-1.pooler.supabase.com:6543/postgres?pgbouncer=true"
+# Direct connection to the database. Used for migrations
+DIRECT_URL="postgresql://postgres.[YOUR-PROJECT-ID]:[YOUR-PASSWORD]@aws-0-eu-central-1.pooler.supabase.com:5432/postgres"
