(feat) - integrate query endpoint + support for AI suggestions

--- a/api/pyproject.toml
+++ b/api/pyproject.toml
@@ -13,5 +13,11 @@ dependencies = [
     "pydantic-core",
     "prisma>=0.15.0",
     "celery[redis]",
+    "gitpython",
+    "openai",
+    "supabase",
+    "tiktoken",
+    "numpy",
+    "psycopg2-binary",
 ]
 
