--- a/web/package.json
+++ b/web/package.json
@@ -10,10 +10,21 @@
     "generate": "dotenv -e ../.env -- prisma generate"
   },
   "dependencies": {
+    "@codemirror/basic-setup": "^0.20.0",
+    "@codemirror/commands": "^6.8.1",
+    "@codemirror/lang-markdown": "^6.3.3",
+    "@codemirror/state": "^6.5.2",
+    "@codemirror/theme-one-dark": "^6.1.3",
+    "@codemirror/view": "^6.38.0",
+    "@git-diff-view/react": "^0.0.28",
     "@hookform/resolvers": "^5.1.1",
+    "@octokit/rest": "^21.1.1",
     "@prisma/client": "^6.11.1",
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.50.3",
+    "@tanstack/react-query": "^5.81.5",
+    "@tanstack/react-query-devtools": "^5.81.5",
+    "codemirror": "^6.0.2",
     "gsap": "^3.13.0",
     "lucide-react": "^0.525.0",
     "next": "15.3.5",
@@ -22,6 +33,10 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.59.0",
+    "react-markdown": "^10.1.0",
+    "rehype-highlight": "^7.0.2",
+    "remark-gfm": "^4.0.1",
+    "shiki": "^3.7.0",
     "zod": "^3.25.73"
   },
   "devDependencies": {
