--- a/web/package.json
+++ b/web/package.json
@@ -20,12 +20,16 @@
     "@hookform/resolvers": "^5.1.1",
     "@octokit/rest": "^21.1.1",
     "@prisma/client": "^6.11.1",
+    "@radix-ui/react-tooltip": "^1.2.7",
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.50.3",
     "@tanstack/react-query": "^5.81.5",
     "@tanstack/react-query-devtools": "^5.81.5",
+
     "codemirror": "^6.0.2",
+    "diff": "^8.0.2",
     "gsap": "^3.13.0",
+    "highlight.js": "^11.11.1",
     "lucide-react": "^0.525.0",
     "next": "15.3.5",
     "next-auth": "^4.24.11",
@@ -34,7 +38,11 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.59.0",
     "react-markdown": "^10.1.0",
+    "rehype-autolink-headings": "^7.1.0",
     "rehype-highlight": "^7.0.2",
+    "rehype-raw": "^7.0.0",
+    "rehype-slug": "^6.0.0",
+    "remark-breaks": "^4.0.0",
     "remark-gfm": "^4.0.1",
     "shiki": "^3.7.0",
     "zod": "^3.25.73"
